deploy/overlays/minikube/controller-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: graph-controller
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: graph-controller
          imagePullPolicy: Never
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
              ephemeral-storage: 512Mi
            limits:
              cpu: "1"
              memory: 1Gi
              ephemeral-storage: 2Gi
